[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_EEG"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.3.5"
python = "^3.8"
[tool.poetry.dev-dependencies]
